# routex-refresh-client-cxx

./: .clang-tidy  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yaml  publish.yaml  test-nuget.yaml  unit-tests.yaml
include/yaxi/: routex-refresh-client.h
scripts/: add-nuget-package.ps1  analyze-dll-deps.ps1  create-nuget.ps1  debug-flags.ps1  remove-nuget-package.ps1
scripts/NuGetTemplate/: routex-refresh-client-cxx.nuspec
src/: lib.cc  lib.rs
tests/dll/: README.md  configuration.all.props  configuration.debug.props  configuration.release.props  dllmain.cpp  test.cpp  test.ps1  test_dll.sln  test_dll.vcxproj  test_dll.vcxproj.filters
tests/unit/: CMakeLists.txt  CMakePresets.json  README.md  helpers.cpp  helpers.hpp  test_account_filter.cpp  test_client_online.cpp  test_main.cpp  test_refresh_vs_interactive.cpp  ticket.cpp  ticket.hpp
tests/unit/cmake/: build_rust.cmake
