[package]
name = "routex-refresh-client-cxx"
version = "0.0.1"
build = "build.rs"
edition = "2024"
rust-version = "1.88"
publish = false
description = "C++ refresh (non-interactive) client for YAXI's Open Banking services"

[dependencies]
anyhow = "1"
cxx = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
paste = "1"
reqwest = { version = "0.13", features = ["rustls"] }
serde_json = "1"
routex-api = "0.30"
routex-client-common = { version = "0.0.5", features = ["error"] }
routex-refresh-client = "0.0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = "1"

[build-dependencies]
cc = "1"
cxx-build = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
codegen-units = 1

[package.metadata.winresource]
FileDescription = "YAXI Open Banking services refresh client"
CompanyName = "YAXI GmbH"
